# recommend_site

./: .gitignore  README.md  asdf.txt  page.html  pyproject.toml  temp.html  temp.ipynb
crawl/: Crawl_Exception.py  check_api.py  naver_novel_crawl.py  novelpia_novel_crawl.py  novelpia_novel_crawl2.py
process/: insert_mysql.py  preprocessing.py
site/my-app/: DATABASE_README.md  QUICKSTART.md  README.md  add_sample_data.py  next.config.ts  package-lock.json  package.json  setup.sh  test_db.py
site/my-app/app/: page.tsx
site/my-app/app/api/auth/login/: route.ts
site/my-app/app/api/contents/: route.ts
site/my-app/app/login/: page.tsx
site/my-app/app/profile/: page.tsx
site/my-app/app/register/: page.tsx
site/my-app/components/: content-grid.tsx  content-modal.tsx  filter-bar.tsx  tag-selector.tsx  user-settings-modal.tsx
site/my-app/components/ui/: separator.tsx
site/my-app/hooks/: use-contents.ts  use-infinite-contents.ts
site/my-app/scripts/: init_database.py  insert_data.py
